testsuite/tests/package/package08e.hs
module Package08e where
import MyHsTypes
import GHC.Hs.Types
import GHC.Hs.Utils
import UniqFM
